[tool.poetry]
name = "nonebot_plugin_h2e"
version = "0.1.3"
description = "A nonebot2 plugin package for how to exercise"
authors = ["Gin2O <wulun0102@outlook.com>"]
license = "MIT"
readme = "README.md"
homepage = " "
repository = "https://github.com/gin2o/nonebot_plugin_h2e"

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.8.4"
httpx = "^0.23.3"
nonebot2 = "^2.0.0rc3"
nonebot-adapter-onebot = "^2.2.1"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"